<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="tip_percentage">Tip %</string>
    <string name="bill">Bill</string>
    <string name="reset">Reset</string>
    <string name="rounded">Rounded</string>
    <string name="per_diner">Per diner</string>
    <string name="diners">Diners</string>
    <string name="defaultDiners">1</string>
    <string name="defaultValue">0.00</string>
    <string name="defaultTip">10.00</string>
</resources>
