<?xml version="1.0" encoding="utf-8"?>
<!-- TODO Using ConstraintLayout
     android:textAppearance="?android:attr/textAppearanceSmall" for TextViews
     style="@style/Base.TextAppearance.AppCompat.Headline" for EditTexts
     style="@style/Widget.AppCompat.Button.Borderless" for Buttons
-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bill"
        app:layout_constraintEnd_toEndOf="@+id/txtBill"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtBill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        android:text="@string/defaultValue"
        app:layout_constraintEnd_toStartOf="@+id/imgBill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblBill"
        tools:ignore="Autofill,LabelFor"
        android:textAlignment="textEnd"/>

    <ImageView
        android:id="@+id/imgBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtBill"
        app:layout_constraintTop_toTopOf="@+id/txtBill"
        app:srcCompat="@drawable/ic_euro_symbol_black_24dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tip_percentage"
        app:layout_constraintEnd_toEndOf="@+id/txtPercentage"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

    <EditText
        android:id="@+id/txtPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/imgPercentage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTipPercentage"
        tools:ignore="Autofill,LabelFor"
        android:text="@string/defaultValue"
        android:textAlignment="textEnd"/>

    <ImageView
        android:id="@+id/imgPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/txtPercentage"
        app:layout_constraintEnd_toStartOf="@+id/txtTip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPercentage"
        app:layout_constraintTop_toTopOf="@+id/txtPercentage"
        app:srcCompat="@drawable/ic_percentage_discount"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="@+id/txtPercentage"
        app:layout_constraintEnd_toStartOf="@+id/imgTip"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/imgPercentage"
        app:layout_constraintTop_toTopOf="@+id/txtPercentage"
        tools:ignore="Autofill,LabelFor"
        android:text="@string/defaultValue"
        android:textAlignment="textEnd"/>

    <ImageView
        android:id="@+id/imgTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtTip"
        app:layout_constraintTop_toTopOf="@+id/txtTip"
        app:srcCompat="@drawable/ic_euro_symbol_black_24dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/total"
        app:layout_constraintEnd_toEndOf="@+id/txtTotal"
        app:layout_constraintTop_toBottomOf="@+id/txtTip"/>

    <ImageView
        android:id="@+id/imgTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtTotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTotal"
        app:srcCompat="@drawable/ic_euro_symbol_black_24dp"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/txtTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="numberDecimal"
        android:text="@string/defaultValue"
        app:layout_constraintEnd_toStartOf="@+id/imgTotal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTotal"
        tools:ignore="Autofill,LabelFor"
        android:textAlignment="textEnd"/>

    <Button
        android:id="@+id/btnResetTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@+id/txtTotal"
        app:layout_constraintEnd_toStartOf="@+id/imgTotal"
        app:layout_constraintTop_toBottomOf="@+id/txtTotal" />

    <TextView
        android:id="@+id/lblDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/diners"
        app:layout_constraintEnd_toEndOf="@+id/txtDiners"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip" />

    <TextView
        android:id="@+id/lblPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/per_diner"
        app:layout_constraintEnd_toEndOf="@+id/txtPerDiner"
        app:layout_constraintTop_toBottomOf="@+id/btnResetTip" />

    <EditText
        android:id="@+id/txtDiners"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        app:layout_constraintHorizontal_weight="1"
        android:inputType="number"
        android:text="@string/defaultDiners"
        app:layout_constraintEnd_toStartOf="@+id/txtPerDiner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDiners"
        android:selectAllOnFocus="true"
        tools:ignore="Autofill,LabelFor"
        android:textAlignment="textEnd"/>

    <EditText
        android:id="@+id/txtPerDiner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/imgPerDiner"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toEndOf="@+id/txtDiners"
        app:layout_constraintTop_toBottomOf="@+id/lblPerDiner"
        android:focusable="false"
        tools:ignore="Autofill,LabelFor"
        android:text="@string/defaultValue"
        android:textAlignment="textEnd"/>

    <ImageView
        android:id="@+id/imgPerDiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPerDiner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtPerDiner"
        app:layout_constraintTop_toTopOf="@+id/txtPerDiner"
        app:srcCompat="@drawable/ic_euro_symbol_black_24dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/lblRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/rounded"
        app:layout_constraintEnd_toEndOf="@+id/txtPerDinerRounded"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDiner" />

    <EditText
        android:id="@+id/txtPerDinerRounded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="@string/defaultValue"
        app:layout_constraintEnd_toStartOf="@+id/imgRounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblRounded"
        android:focusable="false"
        tools:ignore="Autofill,LabelFor"
        android:textAlignment="textEnd"/>

    <ImageView
        android:id="@+id/imgRounded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPerDinerRounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPerDinerRounded"
        app:srcCompat="@drawable/ic_euro_symbol_black_24dp"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/btnResetDiners"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="@+id/txtPerDinerRounded"
        app:layout_constraintTop_toBottomOf="@+id/txtPerDinerRounded" />

    <TextView
        android:id="@+id/lblTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tip"
        app:layout_constraintEnd_toEndOf="@+id/txtTip"
        app:layout_constraintTop_toBottomOf="@+id/txtBill" />

</androidx.constraintlayout.widget.ConstraintLayout>